log
Fri Apr 17 05:58:35 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
51eb798
Fri Apr 17 06:06:14 PM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘createMap’:
hashmap.c:49:28: error: void value not ignored as it ought to be
   49 |     if(new == NULL) return exit(0);
      |                            ^~~~~~~
81104b1
Fri Apr 17 06:06:53 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/60
293a9a3
Fri Apr 17 06:07:29 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
0e8bc49
Fri Apr 17 06:15:23 PM UTC 2026: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:75:31: error: comparison between pointer and integer [-Werror]
   75 |     if(map->buckets[pos]->key == -1) map->buckets[pos] = nuevo;
      |                               ^~
cc1: all warnings being treated as errors
ef7f8c8
Fri Apr 17 06:16:18 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 5/60
3e4c768
Fri Apr 17 06:17:23 PM UTC 2026: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 10/60
8cc0045
Fri Apr 17 06:21:30 PM UTC 2026: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:86:23: error: ‘capacity’ undeclared (first use in this function)
   86 |             if(pos == capacity) pos = 0;
      |                       ^~~~~~~~
hashmap.c:86:23: note: each undeclared identifier is reported only once for each function it appears in
ecf9478
Fri Apr 17 06:22:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fa1a4aa
Fri Apr 17 06:23:13 PM UTC 2026: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  0|0
408abcd
Fri Apr 17 06:23:56 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0223abe
Fri Apr 17 06:26:24 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
2a5ed95
Fri Apr 17 06:42:08 PM UTC 2026: 
 hashmap.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
 tests:  3|5
total_score: 10/60
ef0880b
